<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="@dimen/app_icon_size"
        android:layout_height="@dimen/app_icon_size"
        android:layout_marginTop="@dimen/app_icon_margin_top"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin"
        android:layout_marginBottom="@dimen/text_input_margin"
        android:layout_below="@id/app_icon"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin"
        android:layout_marginBottom="@dimen/text_input_margin"
        android:layout_below="@id/text_input_email"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_button_margin_top"
        android:layout_marginBottom="@dimen/main_button_margin_bottom"
        android:padding="@dimen/main_button_padding"
        android:textStyle="bold"
        android:text="@string/sign_in"/>

        <TextView
            android:id="@+id/button_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_sign_in"
            android:layout_alignParentLeft="true"
            android:text="@string/registration"/>

        <TextView
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_sign_in"
            android:layout_alignParentRight="true"
            android:text="@string/forgot_password"/>

    <RelativeLayout
        android:id="@+id/social_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/social_sign_in_margin_top"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/button_sign_in_twitter"
            android:layout_width="@dimen/social_sign_in_icon_size"
            android:layout_height="@dimen/social_sign_in_icon_size"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sign_in_twitter"
            android:elevation="5dp"/>

        <ImageView
            android:id="@+id/button_sign_in_facebook"
            android:layout_width="@dimen/social_sign_in_icon_size"
            android:layout_height="@dimen/social_sign_in_icon_size"
            android:layout_toRightOf="@id/button_sign_in_twitter"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sign_in_facebook"
            android:elevation="5dp"/>

        <ImageView
            android:id="@+id/button_sign_in_google_plus"
            android:layout_width="@dimen/social_sign_in_icon_size"
            android:layout_height="@dimen/social_sign_in_icon_size"
            android:layout_toRightOf="@id/button_sign_in_facebook"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sign_in_google_plus"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/label_social_networks_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_sign_in_twitter"
            android:text="@string/social_networks_sign_in"/>

    </RelativeLayout>

</RelativeLayout>
