<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="@dimen/app_icon_size"
        android:layout_height="@dimen/app_icon_size"
        android:layout_marginTop="@dimen/app_icon_margin_top"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin"
        android:layout_marginBottom="@dimen/text_input_margin"
        android:layout_below="@id/app_icon"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/full_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin"
        android:layout_marginBottom="@dimen/text_input_margin"
        android:layout_below="@id/text_input_full_name"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin"
        android:layout_marginBottom="@dimen/text_input_margin"
        android:layout_below="@id/text_input_email"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_button_margin_top"
        android:layout_marginBottom="@dimen/main_button_margin_bottom"
        android:padding="@dimen/main_button_padding"
        android:textStyle="bold"
        android:text="@string/sign_up"/>

</RelativeLayout>
